# aisat-studio

./: .gitignore  Makefile  README.md
.github/: copilot-instructions.md
.github/agents/: speckit.tasks.agent.md
.github/hooks/: track-env.base.sh  track-guard.sh  track-hooks.json  track-meter.sh  track-preflight.sh  track-report.sh  track-tokens.sh  track-trace.sh
.github/instructions/: backing-services.instructions.md  devops-cicd.instructions.md
.github/prompts/: ui-ux-to-stitch-workflow.prompt.md
.github/skills/executing-parallel-tracks/: SKILL.md
.github/skills/single-branch-development/: SKILL.md
.specify/: feature.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.stitch/: DESIGN.md  build.py
.stitch/designs/: admin.html  agents.html  chat.html  credits.html  library.html  notifications.html  organization.html  workspace.html
backend-go/: .golangci.yml  go.mod
backend-python/: pyproject.toml
backend-python/evals/: run.py
backend-python/tests/: conftest.py
deploy/: .env.example  Caddyfile  docker-compose.yml
deploy/casdoor/: app.conf
design-system/aisat-intel/: MASTER.md
design-system/aisat-studio/: MASTER.md
frontend/: .eslintrc.cjs  .prettierrc  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/test/: setup.ts
specs/: draft-plan.md
specs/001-contextengine-mvp/: billing-payments-design.md  data-model.md  dispatch-prompts.md  note-enrichment-design.md  phase-4-scalability-hardening.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  track-manifest.md
(+55 files in other folders)
