[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisat-studio-backend-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "mem0ai>=0.1.0",
  "baml-py>=0.75.0",
  "fastmcp>=0.1.0",
  "markitdown>=0.0.1",
  "crawl4ai>=0.4.0",
  "qdrant-client>=1.12.0",
  "openai>=1.54.0",
  "cohere>=5.11.0",
  "structlog>=24.4.0",
  "langfuse>=2.53.0",
  "pydantic>=2.10.0",
  "python-multipart>=0.0.12",
  "nats-py>=2.9.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.30.0",
  "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "testcontainers[postgres,redis]>=4.8.0",
  "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
  "aisat-studio-backend-python[dev]",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "ANN", "S", "A", "C4", "T20", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "evals/*"]
